--- a/jsdom2/13 - keycode-challenge/style.css
+++ b/jsdom2/13 - keycode-challenge/style.css
@@ -11,19 +11,34 @@
 .main { 
     display: flex;
     border: #6b5c2e solid 5px;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     flex-direction: column;
     text-align: center;
     padding: 10px;
 }
+
+.text {
+    display: flex;
+    justify-content: center;
+    z-index: 4;
+    font-family: 'Genos', sans-serif;
+    font-size: 50px;
+    height: 50%;
+    margin-top: 400px;
+    margin-bottom: 400px;
+}
+
 .output { 
     display: flex;
     border: #742e22 solid 5px;
-    width: 50%;
+    width: 60%;
     height: 50%;
     justify-content: center;
+    align-content: center;
     margin: auto;
+    padding-top: 60pt;
+    font-size: 200pt;
 }
 .event { 
     display: flex;
@@ -32,10 +47,15 @@
     margin: auto;
 }
 
+.output, .event {
+    display: none;
+    }
+
 .heading {
     display: flex;
     border: black solid 2px;
     width: 75%;
+    font-family: 'Genos', sans-serif;
     flex-wrap: wrap;
     justify-content: center;
     margin: 10px;
@@ -43,15 +63,20 @@
 
 .output-box { 
     display: flex;
-    border: #7b2229 solid 5px;
+    border: #f8011600 solid 10px;
     width: 100%;
-    /* flex-wrap: wrap; */
+    font-family: 'Genos', sans-serif;
     justify-content: center;
+    margin-top: 5px;
 }
 
-/* #event-code-txt {
-    margin-top: 10px; */
+@media (max-width: 915px) {
+    .event {
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
 }
+
 /* .event-location-txt { 
     display: flex;
     border: #665307 solid 5px;
