--- a/jsdom2/13 - keycode-challenge/style.css
+++ b/jsdom2/13 - keycode-challenge/style.css
@@ -1,4 +1,8 @@
-* {box-sizing: border-box;}
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
+
 
 .main { background:#eccc68;}
 .output { background:#ff6348;}
@@ -15,7 +19,7 @@
     height: 100vh;
     flex-direction: column;
     text-align: center;
-    padding: 10px;
+    /* padding: 0px; */
 }
 
 .text {
