--- a/jsdom2/13 - keycode-challenge/style.css
+++ b/jsdom2/13 - keycode-challenge/style.css
@@ -4,17 +4,17 @@
 }
 
 
-.main { background:#eccc68;}
-.output { background:#ff6348;}
+.main { background: linear-gradient(090deg,#48cae4 0%, #b5179e 100%)}
+/* .output { background:#ff6348;}
 .event { background:#ff7f50;}
 .output-box { background: blueviolet;}
 #event-key { background:#ff4757;}
 #event-location { background:#f1c40f;}
-#event-code { background:#e67e22;}
+#event-code { background:#e67e22;} */
 
 .main { 
     display: flex;
-    border: #6b5c2e solid 5px;
+    /* border: #6b5c2e solid 5px; */
     width: 100%;
     height: 100vh;
     flex-direction: column;
@@ -35,9 +35,10 @@
 
 .output { 
     display: flex;
-    border: #742e22 solid 5px;
+    /* border: #742e22 solid 5px; */
     width: 60%;
     height: 50%;
+    font-family: 'Genos', sans-serif;
     justify-content: center;
     align-content: center;
     margin: auto;
@@ -46,7 +47,7 @@
 }
 .event { 
     display: flex;
-    border:#5f301f solid 5px;
+    /* border:#5f301f solid 5px; */
     width: 75%;
     margin: auto;
     align-items: center;
@@ -58,7 +59,7 @@
 
 .heading {
     display: flex;
-    border: black solid 2px;
+    /* border: black solid 2px; */
     width: 75%;
     font-family: 'Genos', sans-serif;
     flex-wrap: wrap;
@@ -68,9 +69,10 @@
 
 .output-box { 
     display: flex;
-    border: #f8011600 solid 10px;
+    /* border: #f8011600 solid 10px; */
     width: 100%;
     font-family: 'Genos', sans-serif;
+    font-size: 40px;
     justify-content: center;
     margin-top: 5px;
 }
